# rust-raytracing

./: Cargo.toml  README.md  camera.rs  cube.rs  hit.rs  main.rs  sphere.rs  vec.rs
src/: hit.rs  main.rs  material.rs  sphere.rs  vec.rs
